grammar.js
		caddyfile: $ =>
			seq(
				repeat($._eol),
				optional(seq($.global_options, repeat($._eol))),
				optional(choice($.single_site, $.multi_site)),
			),

		single_site: $ => seq($._site, repeat1($._eol), optional($._block_body)),

		multi_site: $ =>
			seq(
				$._root_expression,
				repeat(seq(repeat1($._eol), $._root_expression)),
				repeat1($._eol),
			),
		_root_expression: $ => choice($.definition, $.import_statement),

		_site: $ => choice($._site_field, $._site_list),

		_bare_identifier: $ => alias($._ext_str_bare, $.identifier),

		integer: $ => $._ext_str_num,

		substitution: $ => seq($._sym_brace_o, optional($.reference), $._sym_brace_c),
		identifier: $ => choice($.templated_identifier, $._ext_str_bare),

		literal_string: $ => $._ext_str_bare,

		templated_string: $ => prec.right(seq(repeat1($._tmpl_string_fragment))),

		_tmpl_string_fragment: $ => field('fragment', choice($._nested_string, $.substitution)),
		environment_variable: $ =>
			prec.right(
				seq($._sym_dollar, optional(choice($._env_var_name, $._env_var_name_default))),
			),

		_env_var_name: $ => field('name', $._bare_identifier),
		_env_var_name_default: $ =>
			seq($._env_var_name, $._sym_colon, optional(field('default', $.argument))),

		_fragment: $ => prec.right(seq($._sym_num, optional($.string))),

		address: $ =>
			prec.right(
				seq(
					optional(field('scheme', seq($.string, $._sym_scheme))),
					optional(seq(field('user', $.string), $._sym_at)),
					$.authority,
					optional(field('path', $.path)),
					optional(field('query', $.query)),
					optional(field('fragment', $._fragment)),
				),
			),

		domain_name: $ =>
			prec.right(
				seq(
					field('segment', $.string),
					repeat(choice(field('segment', $.string), $._sym_period)),
				),
			),

		_block_body: $ =>
			seq($._expression, repeat(seq(repeat1($._eol), $._expression)), repeat1($._eol)),

		named_route_definition: $ => seq($.named_route_declaration, $.block),

		named_matcher_reference: $ => $._matcher_name,

		_posix_path: $ =>
			prec.right(
				seq($._sym_solidus, repeat(choice($._sym_solidus, field('segment', $.string)))),
			),

		path: $ => $._posix_path,

		matcher: $ => prec.right(choice($.wildcard, $.named_matcher_reference, $.path)),
		wildcard: $ => $._sym_asterisk,
		_matcher_name: $ => field('name', alias($._matcher_handle, $.identifier)),

		named_matcher_definition: $ => seq($._matcher_name, optional($._ws), $.request_matcher),

		_matcher_block: $ =>
			seq(
				$._sym_block_start,
				repeat1($._eol),
				repeat(seq($.request_matcher, repeat1($._eol))),
				$._sym_brace_c,
			),

		request_matcher: $ =>
			prec.right(
				seq(
					optional(field('modifier', $.not_operator)),
					choice(
						$._regexp_matcher,
						$._generic_matcher,
						$._expression_matcher,
						$.embedded_content,
						$.heredoc,
						$.not_operator,
						alias($._matcher_block, $.block),
					),
				),
			),

		_generic_matcher: $ =>
			prec.right(
				seq(
					field('matcher', $.identifier),
					repeat(seq(repeat1($._ws), $._arguments_field)),
					alias(optional($._matcher_block), $.block),
				),
			),

		_expression_matcher: $ =>
			seq(
				field('matcher', $._keyword_expression),
				repeat($._ws),
				field('argument', choice($._implied_cel_expression, $.embedded_content)),
			),

		regular_expression: $ => repeat1($._ext_str_bare),
		_regexp_matcher: $ =>
			seq(
				field('matcher', alias($._ext_cls_regexp, $.identifier)),
				repeat($._ws),
				choice(
					seq(
						field('argument', $.literal_string),
						$._ws,
						field('argument', $.regular_expression),
					),
					field('argument', $.regular_expression),
				),
			),

		_matcher_field: $ =>
			seq(optional(field('modifier', $.not_operator)), field('matcher', $.matcher)),
		duration: $ => $._ext_str_unit_duration,
		ipv4: $ => $._ext_str_ipv4,
		decimal: $ => $._ext_str_decimal,

		heredoc: $ => seq($._sym_heredoc, $.heredoc_tag, $.heredoc_content, $.heredoc_suffix),
		_sym_heredoc: $ => alias($._ext_heredoc_operator, '<<'),

		invoke_statement: $ =>
			prec.right(
				seq(
					$._keyword_invoke,
					repeat($._ws),
					optional($._matcher_field),
					field('route', $._bare_identifier),
				),
			),

		embedded_content: $ => seq($._sym_grave, $.cel_expression, $._sym_grave),
		cel_expression: $ => $._ext_str_cel,

		// symbols
		_sym_brace_o: $ => alias($._ext_sym_brace_o, '{'),
		_sym_brace_c: $ => alias($._ext_sym_brace_c, '}'),
		_sym_at: $ => alias($._ext_sym_at, '@'),
		_sym_period: $ => alias($._ext_sym_period, '.'),
		_sym_dollar: $ => alias($._ext_sym_dollar, '$'),
		_sym_grave: $ => alias($._ext_sym_grave, '`'),
		_sym_asterisk: $ => alias($._ext_sym_asterisk, '*'),
		_keyword_invoke: $ => alias($._key_invoke, 'invoke'),
		_sym_scheme: $ => alias($._ext_sym_scheme, '://'),

		_ws: $ => $._ext_ws,
		_eol: $ => choice($.comment, $._ext_eol),

		_comment_content: $ => field('content', alias($._ext_str_comment, $.comment)),
		_doc_generic: $ => seq($._sym_at, field('doc', $.identifier)),
		comment: $ =>
			prec.left(
				seq(
					$._ext_sym_comment,
					optional($._doc_generic),
					optional($._comment_content),
					$._ext_eol,
				),
			),
