test/corpus/comments.txt
=================
URL with Fragment
=================

example.com

redir https://example.com/#/about 302

---

(caddyfile
  (single_site
    (address
      (literal_string))
    (construction
      (identifier)
      (literal_string)
      (literal_string))
    (comment
      (comment))))

==============================
Single Site Block with Comment
==============================

example.com

#redir https://example.com/#/about 302

---

(caddyfile
  (single_site
    (address
      (literal_string))
    (comment
      (comment))))

=================================
Multiple Site Blocks with Comment
=================================

example.com {
	#respond "Hello, world!"
}

foobar.com {
	#respond "Hello, world!"
}

# foobar.com {
#	respond "Hello, world!"
# }

---

(caddyfile
  (multi_site
    (site_block
      (address
        (literal_string))
      (comment
        (comment)))
    (site_block
      (address
        (literal_string))
      (comment
        (comment)))
    (comment
      (comment))
    (comment
      (comment))
    (comment
      (comment))))
