test/corpus/durations.txt
========
Integer Duration
========

example.com

respond 5s

---

(caddyfile
  (single_site
    (address
      (domain_name
        (literal_string)
        (literal_string)))
    (construction
      (identifier)
      (duration
        (integer)
        (literal_string)))))

========
Decimal Duration
========

example.com

respond 5.5s

---

(caddyfile
  (single_site
    (address
      (domain_name
        (literal_string)
        (literal_string)))
    (construction
      (identifier)
      (decimal)
      (address
        (domain_name))
      (duration
        (integer)
        (literal_string)))))
