test/corpus/environment_variables.txt
====================
Environment Variable
====================

example.com

root * {$ROOT}

---

(caddyfile
  (single_site
    (address
      (literal_string))
    (construction
      (identifier)
      (matcher
        (wildcard))
      (templated_string
        (substitution
          (environment_variable
            (identifier)))))))

=======================================
Environment Variable with Default Value
=======================================

example.com

root * {$ROOT:/var/www}

---

(caddyfile
  (single_site
    (address
      (literal_string))
    (construction
      (identifier)
      (matcher
        (wildcard))
      (templated_string
        (substitution
          (environment_variable
            (identifier)))))))
