test/corpus/matchers.txt
================
Wildcard Matcher
================

example.com

reverse_proxy * 127.0.0.1

---

(caddyfile
  (single_site
    site: (address
      host: (literal_string))
    (construction
      keyword: (identifier)
      matcher: (matcher
        (wildcard))
      argument: (ipv4))))

============
Path Matcher
============

example.com

reverse_proxy /path 127.0.0.1

---

(caddyfile
  (single_site
    site: (address
      host: (literal_string))
    (construction
      keyword: (identifier)
      matcher: (matcher
        (path_matcher
          path: (path
            segment: (identifier))))
      argument: (ipv4))))

=====================
Wildcard Path Matcher
=====================

example.com

reverse_proxy /path* 127.0.0.1

---

(caddyfile
  (single_site
    site: (address
      host: (literal_string))
    (construction
      keyword: (identifier)
      matcher: (matcher
        (path_matcher
          path: (path
            segment: (identifier)
            segment: (wildcard))))
      argument: (ipv4))))
