test/corpus/named_matchers.txt
=============
Named Matcher
=============

*.example.com

@test host test.example.com

reverse_proxy @test 127.0.0.1

---

(caddyfile
  (single_site
    site: (address
      host: (literal_string))
    (named_matcher_definition
      name: (identifier)
      (request_matcher
        matcher: (identifier)
        argument: (literal_string)))
    (construction
      keyword: (identifier)
      matcher: (matcher
        (named_matcher_reference
          name: (identifier)))
      argument: (ipv4))))

===================
Named Matcher Block
===================

*.example.com

@test {
	host test.example.com
}

reverse_proxy @test 127.0.0.1

---

(caddyfile
  (single_site
    site: (address
      host: (literal_string))
    (named_matcher_definition
      name: (identifier)
      (request_matcher
        (request_matcher
          matcher: (identifier)
          argument: (literal_string))))
    (construction
      keyword: (identifier)
      matcher: (matcher
        (named_matcher_reference
          name: (identifier)))
      argument: (ipv4))))

===========
Not Matcher
===========

*.example.com

@test not host test.example.com

reverse_proxy @test 127.0.0.1

---

(caddyfile
  (single_site
    site: (address
      host: (literal_string))
    (named_matcher_definition
      name: (identifier)
      (request_matcher
        matcher: (identifier)
        argument: (literal_string)))
    (construction
      keyword: (identifier)
      matcher: (matcher
        (named_matcher_reference
          name: (identifier)))
      argument: (ipv4))))

===========
CEL Matcher
===========

*.example.com

@test `{method}.startsWith("P")`
@test2 expression `{method}.startsWith("P")`
@test3 expression {method}.startsWith("P")

reverse_proxy @test 127.0.0.1

---

(caddyfile
  (single_site
    site: (address
      host: (literal_string))
    (named_matcher_definition
      name: (identifier)
      (request_matcher
        (embedded_content
          (cel_expression))))
    (named_matcher_definition
      name: (identifier)
      (request_matcher
        matcher: (identifier)
        argument: (embedded_content
          (cel_expression))))
    (named_matcher_definition
      name: (identifier)
      (request_matcher
        matcher: (identifier)
        argument: (cel_expression)))
    (construction
      keyword: (identifier)
      matcher: (matcher
        (named_matcher_reference
          name: (identifier)))
      argument: (ipv4))))

=========================================
Matcher Directive with Multiple Arguments
=========================================

example.com

@private client_ip 192.168.0.0/16 172.16.0.0/12 10.0.0.0/8 127.0.0.1/8 fd00::/8 ::1

reverse_proxy @private 127.0.0.1

---

(caddyfile
  (single_site
    site: (address
      host: (literal_string))
    (named_matcher_definition
      name: (identifier)
      (request_matcher
        matcher: (identifier)
        argument: (literal_string)
        argument: (literal_string)
        argument: (literal_string)
        argument: (literal_string)
        argument: (literal_string)
        argument: (literal_string)))
    (construction
      keyword: (identifier)
      matcher: (matcher
        (named_matcher_reference
          name: (identifier)))
      argument: (ipv4))))

========================
path_regexp with Regex
========================

example.com

@bar path_regexp /foo/(bar|baz).*
@numeric path_regexp /foo/[0-9]+
@regex path_regexp ^/path/([a-z]+)/end$
@static path_regexp \.([a-f0-9]{6})\.(css|js)$
@static_cel `path_regexp('\.([a-f0-9]{6})\.(css|js)$') && file()`

file_server

---

(caddyfile
  (single_site
    site: (address
      host: (literal_string))
    (named_matcher_definition
      name: (identifier)
      (request_matcher
        matcher: (identifier)
        argument: (regular_expression)))
    (named_matcher_definition
      name: (identifier)
      (request_matcher
        matcher: (identifier)
        argument: (regular_expression)))
    (named_matcher_definition
      name: (identifier)
      (request_matcher
        matcher: (identifier)
        argument: (regular_expression)))
    (named_matcher_definition
      name: (identifier)
      (request_matcher
        matcher: (identifier)
        argument: (regular_expression)))
    (named_matcher_definition
      name: (identifier)
      (request_matcher
        (embedded_content
          (cel_expression))))
    (construction
      keyword: (identifier))))
