test/corpus/named_routes.txt
===========
Named Route
===========

&(named_route) {
	# this is a re-usable named route
}

---

(caddyfile
  (multi_site
    (named_route_definition
      (identifier)
      (comment
        (comment)))))

===============================
Named Route between Site blocks
===============================

example.com {
	invoke snippet
}

&(named_route) {
	# this is a re-usable named route
}

example.net {
	invoke snippet
}

---

(caddyfile
  (multi_site
    (site_block
      (address
        (literal_string))
      (invoke_statement
        (identifier)))
    (named_route_definition
      (identifier)
      (comment
        (comment)))
    (site_block
      (address
        (literal_string))
      (invoke_statement
        (identifier)))))
